RESOLVED FIXED166470
[iOS] Fix some crashing webarchive tests
https://bugs.webkit.org/show_bug.cgi?id=166470
Summary [iOS] Fix some crashing webarchive tests
Andy Estes
Reported 2016-12-23 15:33:19 PST
[iOS] Fix some crashing webarchive tests
Attachments
Patch (23.00 KB, patch)
2016-12-23 15:51 PST, Andy Estes
no flags
Patch (23.96 KB, patch)
2016-12-23 16:02 PST, Andy Estes
no flags
Patch (24.01 KB, patch)
2016-12-23 16:05 PST, Andy Estes
no flags
Andy Estes
Comment 1 2016-12-23 15:51:52 PST
Andy Estes
Comment 2 2016-12-23 16:02:44 PST
Andy Estes
Comment 3 2016-12-23 16:05:24 PST
WebKit Commit Bot
Comment 4 2016-12-23 17:15:44 PST
Comment on attachment 297724 [details] Patch Clearing flags on attachment: 297724 Committed r210143: <http://trac.webkit.org/changeset/210143>
WebKit Commit Bot
Comment 5 2016-12-23 17:15:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.